--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "beammeupscottiii",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.6",
+    "mongoose-unique-validator": "^3.1.0",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
