--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
-    "mongoose-unique-validator": "^3.1.0",
-    "web3": "^1.7.3"
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
