--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "author": "beammeupscottiii",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.9.3",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "busboy": "^1.6.0",
+    "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.3",
+    "parted": "^0.1.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
