--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "mongoose-unique-validator": "^3.1.0",
