--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.3",
     "parted": "^0.1.1",
+    "sharp": "^0.33.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
