See Notes.md 02.26.2025 @ 1455

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_LINK = mongodb+srv://admin:codeforcandy@cluster0.j9uhp.mongodb.net/?retryWrites=true&w=majority
 TOKEN_SECRET = oatmealRaisinCookiesAreGreat
+GCS_PLACES_API_KEY = AIzaSyDxs9ZAqBS0_W7Z7lY1yyiG2QMqf0hTwoo
